# opus8-platform

./: .gitignore  ARCHITECTURE.md  README.md  index.html
.github/workflows/: build-desktop.yml  deploy-supabase.yml  deploy-web.yml
desktop-app/: index.html  package.json  tailwind.config.ts  vite.config.ts
desktop-app/src/: App.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs  proxy.rs
desktop-app/src/components/layout/: AppShell.tsx
desktop-app/src/hooks/: useBilling.ts  useChatStream.ts  useVisionRouter.ts
desktop-app/src/lib/: model-brands.ts  tauri-bridge.ts
desktop-app/src/styles/: globals.css
resources/app/: main.js  preload.js
resources/app/tests/: preload.test.js  product-improvements.test.js  reply-layout.test.js
shared/constants/: index.ts
shared/types/: index.ts
web-app/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
web-app/src/: middleware.ts
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/app/admin/: page.tsx
web-app/src/app/dashboard/: page.tsx
web-app/src/app/login/: page.tsx
web-app/src/components/auth/: GoogleSignInButton.tsx  LoginForm.tsx
web-app/src/components/dashboard/: ApiKeyCard.tsx  ChatLogExport.tsx  GcashModal.tsx  UsageBar.tsx
web-app/src/components/layout/: ThemeProvider.tsx
web-app/src/lib/billing/: calculator.ts
web-app/src/lib/crypto/: api-keys.ts
web-app/supabase/migrations/: 00001_initial.sql
(+11 files in other folders)
