[package]
name = "opus8-desktop"
version = "1.0.0"
description = "Opus8 AI Coding Platform Desktop App"
authors = ["Opus8 Platform"]
edition = "2021"

[lib]
name = "opus8_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
once_cell = "1"
